load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "orderbook_state",
    hdrs = ["orderbook_state.h"],
    srcs = ["orderbook_state.cc"],
    deps = [
        "//test-harness:recorded_event",
        "//exchange-core:events",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "orderbook_state_test",
    srcs = ["orderbook_state_test.cc"],
    deps = [":orderbook_state", "@googletest//:gtest_main"],
)

cc_library(
    name = "shm_transport",
    hdrs = ["shm_transport.h"],
    srcs = ["shm_transport.cc"],
    deps = [
        "//exchange-core:spsc_ring_buffer",
        "//test-harness:recorded_event",
    ],
    linkopts = ["-lrt"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "shm_transport_test",
    srcs = ["shm_transport_test.cc"],
    deps = [":shm_transport", "@googletest//:gtest_main"],
    linkopts = ["-lrt"],
)

cc_library(
    name = "shm_listener",
    hdrs = ["shm_listener.h"],
    deps = [
        "//exchange-core:listeners",
        ":shm_transport",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "shm_listener_test",
    srcs = ["shm_listener_test.cc"],
    deps = [":shm_listener", "@googletest//:gtest_main"],
    linkopts = ["-lrt"],
)

cc_binary(
    name = "exchange-viz-live",
    srcs = ["viz_live.cc"],
    deps = [
        ":shm_transport",
        ":orderbook_state",
        "//test-harness:recorded_event",
    ],
    linkopts = ["-lrt"],
    visibility = ["//visibility:public"],
)

# --- Task 19: UDP Multicast ---
cc_library(
    name = "udp_multicast",
    hdrs = ["udp_multicast.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "udp_multicast_test",
    srcs = ["udp_multicast_test.cc"],
    deps = [":udp_multicast", "@googletest//:gtest_main"],
)

# --- Task 18: TCP Server ---
cc_library(
    name = "tcp_server",
    hdrs = ["tcp_server.h"],
    srcs = ["tcp_server.cc"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "tcp_server_test",
    srcs = ["tcp_server_test.cc"],
    deps = [":tcp_server", "@googletest//:gtest_main"],
)

# --- Task 26: Latency Logger ---
cc_library(
    name = "latency_logger",
    hdrs = ["latency_logger.h"],
    deps = [
        "//exchange-core:matching_engine",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "latency_logger_test",
    srcs = ["latency_logger_test.cc"],
    deps = [":latency_logger", "@googletest//:gtest_main"],
)

# --- Task 22: Pcap Reader ---
cc_library(
    name = "pcap_reader",
    hdrs = ["pcap_reader.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "pcap_reader_test",
    srcs = ["pcap_reader_test.cc"],
    deps = [":pcap_reader", "@googletest//:gtest_main"],
)

# --- Task 25: Enhanced Dashboard ---
cc_binary(
    name = "exchange-dashboard",
    srcs = ["exchange_dashboard.cc"],
    deps = [
        ":orderbook_state",
        ":shm_transport",
        "//exchange-core:ohlcv",
        "//test-harness:recorded_event",
        "@ftxui//:component",
        "@ftxui//:dom",
        "@ftxui//:screen",
    ],
    linkopts = ["-lrt"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "exchange_dashboard_test",
    srcs = ["exchange_dashboard_test.cc"],
    deps = [
        ":orderbook_state",
        "//exchange-core:ohlcv",
        "//test-harness:recorded_event",
        "@googletest//:gtest_main",
    ],
)

# --- Task 23: MDP3 Replayer ---
cc_library(
    name = "mdp3_replayer",
    hdrs = ["mdp3_replayer.h"],
    deps = [
        ":pcap_reader",
        ":udp_multicast",
        "//cme/codec:mdp3_decoder",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "mdp3_replayer_test",
    srcs = ["mdp3_replayer_test.cc"],
    deps = [
        ":mdp3_replayer",
        "//cme/codec:mdp3_encoder",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "mdp3-replayer",
    srcs = ["mdp3_replayer_main.cc"],
    deps = [":mdp3_replayer"],
    visibility = ["//visibility:public"],
)

# --- Task 24: iLink3 Replayer ---
cc_library(
    name = "ilink3_replayer",
    hdrs = ["ilink3_replayer.h"],
    deps = [
        ":pcap_reader",
        "//cme/codec:ilink3_decoder",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "ilink3_replayer_test",
    srcs = ["ilink3_replayer_test.cc"],
    deps = [
        ":ilink3_replayer",
        "//cme/codec:ilink3_encoder",
        "@googletest//:gtest_main",
    ],
)

# --- Task 33: TUI Renderer ---
cc_library(
    name = "tui_renderer",
    hdrs = ["tui_renderer.h"],
    srcs = ["tui_renderer.cc"],
    deps = [
        ":orderbook_state",
        "@ftxui//:dom",
        "@ftxui//:screen",
    ],
    visibility = ["//visibility:public"],
)

# --- iLink3 Order Sender CLI ---
cc_binary(
    name = "ilink3-send-order",
    srcs = ["ilink3_send_order.cc"],
    deps = [
        "//cme/codec:ilink3_encoder",
        "//cme/codec:ilink3_decoder",
        "//cme:cme_products",
        "//exchange-core:matching_engine",
    ],
    visibility = ["//visibility:public"],
)

# --- Task 34: Offline journal visualizer ---
cc_binary(
    name = "exchange-viz-replay",
    srcs = ["viz_replay.cc"],
    deps = [
        ":tui_renderer",
        ":orderbook_state",
        "//test-harness:journal_parser",
        "//test-harness:test_runner",
        "//test-harness:recording_listener",
        "//exchange-core:matching_engine",
        "@ftxui//:component",
        "@ftxui//:dom",
        "@ftxui//:screen",
    ],
    visibility = ["//visibility:public"],
)

# --- Task 20: Structured Event Logger ---
cc_library(
    name = "event_logger",
    hdrs = ["event_logger.h"],
    deps = [
        "//exchange-core:listeners",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "event_logger_test",
    srcs = ["event_logger_test.cc"],
    deps = [":event_logger", "@googletest//:gtest_main"],
)

# --- Simulation Exercise: TcpClient ---
cc_library(
    name = "tcp_client",
    hdrs = ["tcp_client.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "tcp_client_test",
    srcs = ["tcp_client_test.cc"],
    deps = [":tcp_client", ":tcp_server", "@googletest//:gtest_main"],
)

# --- Simulation Exercise: Trading Strategies ---
cc_library(
    name = "trading_strategy",
    hdrs = ["trading_strategy.h"],
    deps = ["//exchange-core:types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "trading_strategy_test",
    srcs = ["trading_strategy_test.cc"],
    deps = [":trading_strategy", "@googletest//:gtest_main"],
)

# --- Simulation Exercise: Journal Reconciler ---
cc_library(
    name = "journal_reconciler",
    hdrs = ["journal_reconciler.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "journal_reconciler_test",
    srcs = ["journal_reconciler_test.cc"],
    deps = [":journal_reconciler", "@googletest//:gtest_main"],
)

cc_binary(
    name = "journal-reconciler",
    srcs = ["journal_reconciler.cc"],
    deps = [":journal_reconciler"],
    visibility = ["//visibility:public"],
)

# --- Simulation Exercise: SimClient ---
cc_library(
    name = "sim_client",
    hdrs = ["sim_client.h"],
    deps = [
        ":tcp_client",
        ":trading_strategy",
        "//cme/codec:ilink3_encoder",
        "//cme/codec:ilink3_decoder",
        "//ice/fix:fix_encoder",
        "//ice/fix:fix_parser",
        "//exchange-core:types",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "sim_client_test",
    srcs = ["sim_client_test.cc"],
    deps = [
        ":sim_client",
        ":tcp_server",
        "@googletest//:gtest_main",
    ],
)

# --- Secdef: InstrumentInfo + SecdefConsumer ---
cc_library(
    name = "instrument_info",
    hdrs = ["instrument_info.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "secdef_consumer",
    hdrs = ["secdef_consumer.h"],
    deps = [":instrument_info"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "instrument_info_test",
    srcs = ["instrument_info_test.cc"],
    deps = [
        ":instrument_info",
        ":secdef_consumer",
        "@googletest//:gtest_main",
    ],
)

# --- Secdef: CmeSecdefConsumer ---
cc_library(
    name = "cme_secdef",
    hdrs = ["cme_secdef.h"],
    deps = [
        ":instrument_info",
        ":secdef_consumer",
        ":udp_multicast",
        "//cme/codec:mdp3_decoder",
        "//cme/codec:mdp3_encoder",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "cme_secdef_test",
    srcs = ["cme_secdef_test.cc"],
    deps = [
        ":cme_secdef",
        ":udp_multicast",
        "//cme:cme_products",
        "//cme/codec:mdp3_encoder",
        "@googletest//:gtest_main",
    ],
)

# --- Secdef: IceSecdefConsumer ---
cc_library(
    name = "ice_secdef",
    hdrs = ["ice_secdef.h"],
    deps = [
        ":instrument_info",
        ":secdef_consumer",
        ":udp_multicast",
        "//ice/impact:impact_decoder",
        "//ice/impact:impact_encoder",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "ice_secdef_test",
    srcs = ["ice_secdef_test.cc"],
    deps = [
        ":ice_secdef",
        ":udp_multicast",
        "//ice:ice_products",
        "//ice/impact:impact_encoder",
        "@googletest//:gtest_main",
    ],
)

# --- Simulation Exercise: Exchange Observer ---
cc_binary(
    name = "exchange-observer",
    srcs = ["exchange_observer.cc"],
    deps = [
        ":udp_multicast",
        "//cme/codec:mdp3_decoder",
        "//ice/impact:impact_decoder",
        "//cme:cme_products",
        "//ice:ice_products",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "exchange_observer_test",
    srcs = ["exchange_observer_test.cc"],
    deps = [
        "//cme/codec:mdp3_decoder",
        "//ice/impact:impact_decoder",
        "@googletest//:gtest_main",
    ],
)

# --- Simulation Exercise: Exchange Trader ---
cc_binary(
    name = "exchange-trader",
    srcs = ["exchange_trader.cc"],
    deps = [
        ":sim_client",
        ":trading_strategy",
        "//cme:cme_products",
        "//ice:ice_products",
    ],
    visibility = ["//visibility:public"],
)

# --- Simulation Exercise: Integration Test ---
# Run directly: bash tools/sim_integration_test.sh
# Requires multicast (loopback); not a Bazel test target.
# See docs/plans/2026-03-27-exchange-simulation-plan.md section 4.7.
