load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "sbe_header",
    hdrs = ["sbe_header.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "sbe_header_test",
    srcs = ["sbe_header_test.cc"],
    deps = [
        ":sbe_header",
        "@googletest//:gtest_main",
    ],
)
