load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "sbe_header",
    hdrs = ["sbe_header.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "sbe_header_test",
    srcs = ["sbe_header_test.cc"],
    deps = [
        ":sbe_header",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "ilink3_messages",
    hdrs = ["ilink3_messages.h"],
    deps = [":sbe_header"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "ilink3_messages_test",
    srcs = ["ilink3_messages_test.cc"],
    deps = [
        ":ilink3_messages",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "mdp3_messages",
    hdrs = ["mdp3_messages.h"],
    deps = [":sbe_header"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "mdp3_messages_test",
    srcs = ["mdp3_messages_test.cc"],
    deps = [
        ":mdp3_messages",
        "@googletest//:gtest_main",
    ],
)
