load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "e2e_test_runner",
    hdrs = ["e2e_test_runner.h"],
    srcs = ["e2e_test_runner.cc"],
    deps = [
        "//cme:cme_simulator",
        "//cme:ilink3_gateway",
        "//cme:ilink3_report_publisher",
        "//cme:mdp3_feed_publisher",
        "//cme/codec:ilink3_decoder",
        "//cme/codec:ilink3_encoder",
        "//cme/codec:ilink3_messages",
        "//cme/codec:mdp3_decoder",
        "//cme/codec:mdp3_messages",
        "//cme/codec:sbe_header",
        "//exchange-core:composite_listener",
        "//test-harness:journal_parser",
        "//test-harness:recording_listener",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "e2e_test_runner_test",
    srcs = ["e2e_test_runner_test.cc"],
    deps = [
        ":e2e_test_runner",
        "//test-harness:journal_parser",
        "@googletest//:gtest_main",
    ],
)
