load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "spread_strategy",
    hdrs = ["spread_strategy.h"],
    deps = ["//exchange-core:types"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "spread_strategy_registry",
    hdrs = ["spread_strategy_registry.h"],
    deps = [":spread_strategy"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "spread_instrument_config",
    hdrs = ["spread_instrument_config.h"],
    deps = [
        ":spread_strategy",
        ":spread_strategy_registry",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "implied_price_engine",
    hdrs = ["implied_price_engine.h"],
    deps = [
        ":spread_strategy",
        "//exchange-core:types",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "circular_guard",
    hdrs = ["circular_guard.h"],
    deps = ["//exchange-core:types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "spread_strategy_test",
    srcs = ["spread_strategy_test.cc"],
    deps = [
        ":spread_instrument_config",
        ":spread_strategy",
        ":spread_strategy_registry",
        "@googletest//:gtest_main",
    ],
)
