load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "spread_strategy",
    hdrs = ["spread_strategy.h"],
    deps = ["//exchange-core:types"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "spread_strategy_registry",
    hdrs = ["spread_strategy_registry.h"],
    deps = [":spread_strategy"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "spread_instrument_config",
    hdrs = ["spread_instrument_config.h"],
    deps = [
        ":spread_strategy",
        ":spread_strategy_registry",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "implied_price_engine",
    hdrs = ["implied_price_engine.h"],
    deps = [
        ":spread_strategy",
        "//exchange-core:types",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "circular_guard",
    hdrs = ["circular_guard.h"],
    deps = ["//exchange-core:types"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "spread_events",
    hdrs = ["spread_events.h"],
    deps = ["//exchange-core:types"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "multi_leg_coordinator",
    hdrs = ["multi_leg_coordinator.h"],
    deps = [
        "//exchange-core:matching_engine",
        "//exchange-core:types",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "spread_book",
    hdrs = ["spread_book.h"],
    deps = [
        ":implied_price_engine",
        ":spread_strategy",
        "//exchange-core:events",
        "//exchange-core:listeners",
        "//exchange-core:matching_engine",
        "//exchange-core:object_pool",
        "//exchange-core:orderbook",
        "//exchange-core:types",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "spread_simulator",
    hdrs = ["spread_simulator.h"],
    deps = [
        ":spread_book",
        ":spread_instrument_config",
        ":spread_strategy_registry",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "spread_strategy_test",
    srcs = ["spread_strategy_test.cc"],
    deps = [
        ":spread_instrument_config",
        ":spread_strategy",
        ":spread_strategy_registry",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "implied_price_engine_test",
    srcs = ["implied_price_engine_test.cc"],
    deps = [
        ":implied_price_engine",
        ":spread_strategy",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "circular_guard_test",
    srcs = ["circular_guard_test.cc"],
    deps = [
        ":circular_guard",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "spread_book_test",
    srcs = ["spread_book_test.cc"],
    deps = [
        ":multi_leg_coordinator",
        ":spread_book",
        ":spread_events",
        ":spread_strategy",
        "//test-harness:recording_listener",
        "@googletest//:gtest_main",
    ],
)
