load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "impact_messages",
    hdrs = ["impact_messages.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "impact_messages_test",
    srcs = ["impact_messages_test.cc"],
    deps = [
        ":impact_messages",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "impact_encoder",
    hdrs = ["impact_encoder.h"],
    deps = [
        ":impact_messages",
        "//exchange-core:events",
        "//ice:ice_products",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "impact_encoder_test",
    srcs = ["impact_encoder_test.cc"],
    deps = [
        ":impact_encoder",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "impact_decoder",
    hdrs = ["impact_decoder.h"],
    deps = [":impact_messages"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "impact_decoder_test",
    srcs = ["impact_decoder_test.cc"],
    deps = [
        ":impact_decoder",
        ":impact_encoder",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "impact_publisher",
    hdrs = ["impact_publisher.h"],
    deps = [
        ":impact_encoder",
        "//exchange-core:listeners",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "impact_publisher_test",
    srcs = ["impact_publisher_test.cc"],
    deps = [
        ":impact_publisher",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "impact_codec_test",
    srcs = ["impact_codec_test.cc"],
    deps = [
        ":impact_decoder",
        ":impact_encoder",
        "@googletest//:gtest_main",
    ],
)
