load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "krx_e2e_test_runner",
    srcs = ["krx_e2e_test_runner.cc"],
    hdrs = ["krx_e2e_test_runner.h"],
    deps = [
        "//exchange-core:composite_listener",
        "//ice/fix:fix_encoder",
        "//ice/fix:fix_parser",
        "//krx:krx_products",
        "//krx:krx_simulator",
        "//krx/fast:fast_decoder",
        "//krx/fast:fast_publisher",
        "//krx/fix:krx_fix_exec_publisher",
        "//krx/fix:krx_fix_gateway",
        "//test-harness:journal_parser",
        "//test-harness:recording_listener",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "krx_e2e_test_runner_test",
    srcs = ["krx_e2e_test_runner_test.cc"],
    deps = [
        ":krx_e2e_test_runner",
        "//test-harness:journal_parser",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "krx_e2e_journal_test",
    srcs = ["krx_e2e_journal_test.cc"],
    data = ["//test-journals:krx_journals"],
    deps = [
        ":krx_e2e_test_runner",
        "//test-harness:journal_parser",
        "@googletest//:gtest_main",
    ],
)
