load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "fast_types",
    hdrs = ["fast_types.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "fast_types_test",
    srcs = ["fast_types_test.cc"],
    deps = [
        ":fast_types",
        "@googletest//:gtest_main",
    ],
)
