load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "fast_types",
    hdrs = ["fast_types.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "fast_types_test",
    srcs = ["fast_types_test.cc"],
    deps = [
        ":fast_types",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "fast_encoder",
    hdrs = ["fast_encoder.h"],
    deps = [
        ":fast_types",
        "//exchange-core:events",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "fast_encoder_test",
    srcs = ["fast_encoder_test.cc"],
    deps = [
        ":fast_encoder",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "fast_decoder",
    hdrs = ["fast_decoder.h"],
    deps = [":fast_types"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "fast_decoder_test",
    srcs = ["fast_decoder_test.cc"],
    deps = [
        ":fast_decoder",
        ":fast_encoder",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "fast_publisher",
    hdrs = ["fast_publisher.h"],
    deps = [
        ":fast_encoder",
        "//exchange-core:listeners",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "fast_publisher_test",
    srcs = ["fast_publisher_test.cc"],
    deps = [
        ":fast_publisher",
        ":fast_decoder",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "fast_codec_test",
    srcs = ["fast_codec_test.cc"],
    deps = [
        ":fast_decoder",
        ":fast_encoder",
        "//exchange-core:events",
        "@googletest//:gtest_main",
    ],
)
