load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "krx_fix_messages",
    hdrs = ["krx_fix_messages.h"],
    deps = ["//ice/fix:fix_parser"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "krx_fix_messages_test",
    srcs = ["krx_fix_messages_test.cc"],
    deps = [
        ":krx_fix_messages",
        "@googletest//:gtest_main",
    ],
)
