load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "krx_fix_messages",
    hdrs = ["krx_fix_messages.h"],
    deps = ["//ice/fix:fix_parser"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "krx_fix_messages_test",
    srcs = ["krx_fix_messages_test.cc"],
    deps = [
        ":krx_fix_messages",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "krx_fix_gateway",
    hdrs = ["krx_fix_gateway.h"],
    deps = [
        ":krx_fix_messages",
        "//exchange-core:matching_engine",
        "//ice/fix:fix_parser",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "krx_fix_gateway_test",
    srcs = ["krx_fix_gateway_test.cc"],
    deps = [
        ":krx_fix_gateway",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "krx_fix_exec_publisher",
    hdrs = ["krx_fix_exec_publisher.h"],
    deps = [
        "//exchange-core:listeners",
        "//exchange-core:types",
        "//ice/fix:fix_encoder",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "krx_fix_exec_publisher_test",
    srcs = ["krx_fix_exec_publisher_test.cc"],
    deps = [
        ":krx_fix_exec_publisher",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "krx_fix_pipeline_test",
    srcs = ["krx_fix_pipeline_test.cc"],
    deps = [
        ":krx_fix_exec_publisher",
        ":krx_fix_gateway",
        ":krx_fix_messages",
        "//exchange-core:types",
        "//ice/fix:fix_encoder",
        "//ice/fix:fix_parser",
        "//krx:krx_products",
        "//krx:krx_simulator",
        "//krx/fast:fast_publisher",
        "@googletest//:gtest_main",
    ],
)
